--- a/M_/D_M1/.classpath
+++ b/M_/D_M1/.classpath
@@ -16,5 +16,6 @@
 	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-util-3.0.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-util-3.0.4-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-util-3.0.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/org.eclipse.swt.win32.win32.x86_64-3.120.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
