--- a/M_/D_M1/.classpath
+++ b/M_/D_M1/.classpath
@@ -6,11 +6,19 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-extra-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/squidlib-util-3.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/hibernate-core-6.1.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/jakarta.persistence-api-3.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/danielg/Desktop/BOX/J/LIB/javax.websocket-api-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/hibernate-core-6.1.2.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/jakarta.persistence-api-3.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/javax.websocket-api-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/lwjgl3-awt-0.1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/org.eclipse.swt.win32.win32.x86_64-3.120.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-3.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-3.0.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-3.0.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-extra-3.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-extra-3.0.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-extra-3.0.4-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-util-3.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-util-3.0.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Master/Desktop/Library/_D/squidlib-util-3.0.4-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
